--- a/scss/pages_scss/_accueil.scss
+++ b/scss/pages_scss/_accueil.scss
@@ -3,6 +3,14 @@ body {
   font-family: $puritan;
 }
 
+.grille-accueil {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template: 50px 500px minmax(300px,1fr) 40px
+  / 600px 1fr 600px;
+}
+
 // ----------- Navigation -----------
 
 nav {
@@ -66,12 +74,16 @@ nav {
   font-size: 24px;
   font-family: $roboto;
 }
+.vide {
+  display: none;
+}
 
 // Nav Responsive
 @media (max-width: 900px) {
   nav {
     padding: 15px 20px;
     position: relative;
+    width: 100vw;
   }
 
   .nav-icon {
@@ -155,11 +167,174 @@ nav {
   .contact-nav {
     display: none;
   }
+
+  .vide {
+    display: block;
+    width: 25px;
+    order: 3;
+  }
 }
 
 @media (max-width: 500px) {
    .nav-icon span {
      font-size: 20px;
    }
+}
+
+/* -------------- Présentation ------------- */
+
+
+.presentation {
+  grid-area: 2 / 1 / 3 / 2;
+  background: $babyBlueEyes;
+  padding: 40px;
+}
+.presentation h1 {
+  font-size: 80px;
+  font-family: $fira;
+  font-weight: 700;
+  padding-bottom: 30px;
+}
+.presentation p {
+  font-size: 20px;
+  margin-top: 20px;
+  line-height: 1.3;
+}
+.presentation a {
+  padding: 15px;
+  text-decoration: none;
+  color: #000;
+  border: 1px solid #333;
+  border-radius: 5px;
+  font-size: 20px;
+  margin-top: 20px;
+  cursor: pointer;
+  display: block;
+  width: 170px;
+  text-align: center;
+}
+.presentation i {
+  font-size: 80px;
+  padding-bottom: 40px;
+}
+
+
+/* -------------- Slider ------------- */
+
+
+.slider {
+  grid-area: 2 / 2 / 3 / 4;
+  position: relative;
+}
+
+.container-slides {
+  width: 100%;
+  height: 500px;
+  margin: 0 auto;
+  position: relative;
+}
+
+.container-slides img {
+  position: absolute;
+  top: 0px;
+  opacity: 0;
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+  display: block;
+  transition: opacity 0.6s ease-in-out;
+}
+
+img.active {
+  opacity: 1;
+}
+.cont-btn {
+  position: absolute;
+  top: 85%;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+.btn-nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+  margin: 0 15px;
+  cursor: pointer;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  color: #333;
+  background: #f1f1f1;
+  border: 1px solid #333;
+}
+.btn-nav img {
+  width: 20px;
+  height: 20px;
+}
+
+
+/* -------------- Choix ------------- */
+
+
+.choix {
+  grid-area: 3 / 1 / 4 / 3;
+  background: #222;
+  color: #f1f1f1;
+  border: 1px solid #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+.titre-choix {
+  font-size: 50px;
+  margin-bottom: 20px;
+  font-family: Playfair Display, 'Times New Roman', Times, serif;
+  text-align: center;
+}
+.choix p {
+  font-size: 20px;
+  line-height: 1.4;
+}
+.go-galerie {
+  font-size: 20px;
+  display: block;
+  margin: 20px auto;
+  width: 300px;
+  padding: 20px;
+  text-decoration: none;
+  border: 1px solid #fff;
+  text-align: center;
+  border-radius: 5px;
+  color: #f1f1f1;
+  background: #222;
+}
+.go-galerie:hover {
+  transition: all 0.2s ease-in-out;
+  background: #f1f1f1;
+  color: #333;
+}
+.cont-medias {
+  position: absolute;
+  left: 3%;
+  top: 50%;
+  transform: translateY(-50%);
+}
+.media {
+  margin: 10px 0;
+  width: 60px;
+  height: 60px;
+  border: 1px solid #f1f1f1;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.media img {
+  width: 25px;
 }
 
