--- a/scss/placeholder/_placeholders.scss
+++ b/scss/placeholder/_placeholders.scss
@@ -1,5 +1,5 @@
 %titre-global {
-  font-family: Comfortaa, sans-serif;
+  font-family: $fira;
   text-align: center;
   font-size: 70px;
   padding: 0 25px 20px;
