--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -12,3 +12,4 @@ $white: #f1f1f1;
 $fira : 'Fira Sans Condensed', sans-serif;
 $puritan: 'Puritan', sans-serif;
 $roboto: 'Roboto', sans-serif;
+$bitter : 'Bitter', serif;
