--- a/scss/pages_scss/_accueil.scss
+++ b/scss/pages_scss/_accueil.scss
@@ -3,14 +3,6 @@ body {
   font-family: $puritan;
 }
 
-.grille-accueil {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template: 50px 500px minmax(300px,1fr) 40px
-  / 600px 1fr 600px;
-}
-
 // ----------- Navigation -----------
 
 nav {
@@ -21,13 +13,16 @@ nav {
   padding: 15px 25px;
   background: $gunmetal;
   box-shadow: inset 0px -1px 0px #c5c5c6;
+  z-index: 100;
 }
+
 .nav-icon {
   display: flex;
   align-items: center;
   text-decoration: none;
   margin-right: 20px;
 }
+
 .nav-icon span {
   font-family: $roboto;
   font-size: 25px;
@@ -35,18 +30,21 @@ nav {
   font-weight: 400;
   color: $white;
 }
+
 .hamburger {
   display: none;
 }
+
 .navlinks-container a {
   margin: 0 10px;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 500;
   text-decoration: none;
   color: $white;
   display: inline-block;
   position: relative;
 }
+
 .navlinks-container a::after {
   content: "";
   display: block;
@@ -59,9 +57,11 @@ nav {
   background: $white;
   transition: transform 0.3s ease-out;
 }
+
 .navlinks-container a:hover::after {
   transform: scaleX(1);
 }
+
 .contact-nav {
   display: flex;
   align-items: center;
@@ -69,11 +69,13 @@ nav {
   margin-left: auto;
   margin-right: 25px;
 }
+
 .contact-nav p {
   margin: 0 15px;
   font-size: 24px;
   font-family: $roboto;
 }
+
 .vide {
   display: none;
 }
@@ -98,7 +100,7 @@ nav {
   .main-navlinks {
     order: 1;
   }
- 
+
   .hamburger {
     width: 20px;
     height: 20px;
@@ -117,15 +119,18 @@ nav {
     background: $white;
     position: absolute;
     pointer-events: none;
-    transition: opacity 0.3s 0.15s ease-out;  
+    transition: opacity 0.3s 0.15s ease-out;
   }
 
-  .hamburger span:nth-child(1), .hamburger span:nth-child(3) {
+  .hamburger span:nth-child(1),
+  .hamburger span:nth-child(3) {
     transition: transform 0.3s ease-out;
   }
+
   .hamburger span:nth-child(1) {
     transform: translateY(7px);
   }
+
   .hamburger span:nth-child(3) {
     transform: translateY(-7px);
   }
@@ -133,10 +138,12 @@ nav {
   .hamburger.open span:nth-child(1) {
     transform: translate(0) rotate(135deg);
   }
+
   .hamburger.open span:nth-child(2) {
     opacity: 0;
     transition: opacity 0s ease-out;
   }
+
   .hamburger.open span:nth-child(3) {
     transform: translate(0) rotate(-135deg);
   }
@@ -155,6 +162,7 @@ nav {
     border-right: 1px solid #c5c5c6;
     transform: translate(-100%);
   }
+
   .open {
     transform: translate(0%);
   }
@@ -176,165 +184,68 @@ nav {
 }
 
 @media (max-width: 500px) {
-   .nav-icon span {
-     font-size: 20px;
-   }
+  .nav-icon span {
+    font-size: 20px;
+  }
 }
 
-/* -------------- Présentation ------------- */
 
-
-.presentation {
-  grid-area: 2 / 1 / 3 / 2;
-  background: $babyBlueEyes;
-  padding: 40px;
-}
-.presentation h1 {
-  font-size: 80px;
-  font-family: $fira;
-  font-weight: 700;
-  padding-bottom: 30px;
-}
-.presentation p {
-  font-size: 20px;
-  margin-top: 20px;
-  line-height: 1.3;
-}
-.presentation a {
-  padding: 15px;
-  text-decoration: none;
-  color: #000;
-  border: 1px solid #333;
-  border-radius: 5px;
-  font-size: 20px;
-  margin-top: 20px;
-  cursor: pointer;
-  display: block;
-  width: 170px;
+// ----------- Accueil -----------
+header {
+  background: url("../../assets/img/headerBG.jpeg") no-repeat center;
+  height: 100vh;
+  background-size: cover;
   text-align: center;
-}
-.presentation i {
-  font-size: 80px;
-  padding-bottom: 40px;
-}
-
-
-/* -------------- Slider ------------- */
-
-
-.slider {
-  grid-area: 2 / 2 / 3 / 4;
   position: relative;
 }
 
-.container-slides {
+.accueil-opacite {
+  height: 100%;
   width: 100%;
-  height: 500px;
-  margin: 0 auto;
-  position: relative;
+  background-color: rgba(0, 0, 0, 0.247);
 }
 
-.container-slides img {
-  position: absolute;
-  top: 0px;
-  opacity: 0;
-  width: 100%;
-  height: 500px;
-  object-fit: cover;
-  display: block;
-  transition: opacity 0.6s ease-in-out;
+.accueil-txt-container {
+  width: 90%;
+  max-width: 1300px;
+  min-width: 300px;
+  height: 700px;
 }
 
-img.active {
-  opacity: 1;
+.main-h1 {
+  padding: 150px 0 40px;
+  font-size: 140px;
+  color: #fff;
+  font-family: $bitter;
+  letter-spacing: 2px;
 }
-.cont-btn {
-  position: absolute;
-  top: 85%;
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-}
-.btn-nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 50px;
-  margin: 0 15px;
-  cursor: pointer;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  color: #333;
-  background: #f1f1f1;
-  border: 1px solid #333;
-}
-.btn-nav img {
-  width: 20px;
-  height: 20px;
+
+h2 {
+  @extend %titre-global;
+  color: #fff;
 }
 
 
-/* -------------- Choix ------------- */
-
-
-.choix {
-  grid-area: 3 / 1 / 4 / 3;
-  background: #222;
-  color: #f1f1f1;
-  border: 1px solid #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  position: relative;
-}
-.titre-choix {
-  font-size: 50px;
-  margin-bottom: 20px;
-  font-family: Playfair Display, 'Times New Roman', Times, serif;
-  text-align: center;
-}
-.choix p {
-  font-size: 20px;
-  line-height: 1.4;
-}
-.go-galerie {
-  font-size: 20px;
-  display: block;
-  margin: 20px auto;
-  width: 300px;
-  padding: 20px;
-  text-decoration: none;
-  border: 1px solid #fff;
-  text-align: center;
-  border-radius: 5px;
-  color: #f1f1f1;
-  background: #222;
-}
-.go-galerie:hover {
-  transition: all 0.2s ease-in-out;
-  background: #f1f1f1;
-  color: #333;
-}
 .cont-medias {
   position: absolute;
   left: 3%;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 75%;
 }
 .media {
-  margin: 10px 0;
-  width: 60px;
-  height: 60px;
+  margin: 20px 0;
+  width: 80px;
+  height: 80px;
   border: 1px solid #f1f1f1;
+  background: $gunmetal;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .media img {
-  width: 25px;
+  width: 35px;
 }
 
+.media:hover {
+  
+}
