--- a/scss/placeholder/_placeholders.scss
+++ b/scss/placeholder/_placeholders.scss
@@ -1,5 +1,5 @@
 %titre-global {
-  font-family: $fira;
+  font-family: $montserrat;
   text-align: center;
   font-size: 70px;
   padding: 0 25px 20px;
@@ -22,8 +22,3 @@
 //   }
 // }
 
-%flex-double-centre {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
