--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -6,10 +6,9 @@ $tan: #d3b88c;
 $white: #f1f1f1;
 
 
-
 // Fonts 
 
-$fira : 'Fira Sans Condensed', sans-serif;
+$montserrat : 'Montserrat', sans-serif;
 $puritan: 'Puritan', sans-serif;
 $roboto: 'Roboto', sans-serif;
 $bitter : 'Bitter', serif;
