--- a/scss/pages_scss/_accueil.scss
+++ b/scss/pages_scss/_accueil.scss
@@ -1,5 +1,4 @@
 body {
-  height: 100vh;
   font-family: $puritan;
 }
 
@@ -81,7 +80,7 @@ nav {
 }
 
 // Nav Responsive
-@media (max-width: 900px) {
+@media (max-width: 950px) {
   nav {
     padding: 15px 20px;
     position: relative;
@@ -203,49 +202,81 @@ header {
   height: 100%;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.247);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .accueil-txt-container {
   width: 90%;
   max-width: 1300px;
   min-width: 300px;
-  height: 700px;
+}
+
+.titre-global {
+  @extend %titre-global;
+  color: #fff;
+  padding: 80px 0 30px;
 }
 
 .main-h1 {
-  padding: 150px 0 40px;
-  font-size: 140px;
+  padding: 30px 0 100px;
+  font-size: 150px;
   color: #fff;
   font-family: $bitter;
   letter-spacing: 2px;
 }
 
-h2 {
-  @extend %titre-global;
+.accueil-infos {
+  width: 700px;
+  height: 300px;
+  padding: 25px auto;
+  background: $babyBlueEyes;
+  display: flex;
+  border-radius: 5px;
+}
+
+.scroll-btn {
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: $gunmetal;
+  border-radius: 50px;
+  border: 1px solid #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.scroll-btn i {
+  font-size: 60px;
   color: #fff;
 }
 
-
 .cont-medias {
   position: absolute;
-  left: 3%;
+  right: 3%;
   top: 75%;
 }
 .media {
   margin: 20px 0;
-  width: 80px;
-  height: 80px;
+  width: 70px;
+  height: 70px;
   border: 1px solid #f1f1f1;
   background: $gunmetal;
-  border-radius: 50%;
+  border-radius: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: transform 0.2s ease-in-out;
 }
 .media img {
   width: 35px;
 }
 
 .media:hover {
-  
+  transform: scale(1.1);
 }
