--- a/scss/pages_scss/_accueil.scss
+++ b/scss/pages_scss/_accueil.scss
@@ -1,8 +1,12 @@
 body {
   font-family: $puritan;
+  width: 100%;
 }
 
+
+
 // ----------- Navigation -----------
+
 
 nav {
   position: fixed;
@@ -79,12 +83,13 @@ nav {
   display: none;
 }
 
+
 // Nav Responsive
-@media (max-width: 950px) {
+@media (max-width: 980px) {
   nav {
-    padding: 15px 20px;
+    padding: 15px 0px;
     position: relative;
-    width: 100vw;
+    width: 100%;
   }
 
   .nav-icon {
@@ -189,6 +194,7 @@ nav {
 }
 
 
+
 // ----------- Accueil -----------
 header {
   background: url("../../assets/img/headerBG.jpeg") no-repeat center;
@@ -208,41 +214,30 @@ header {
 }
 
 .accueil-txt-container {
-  width: 90%;
-  max-width: 1300px;
-  min-width: 300px;
+  width: 100%;
+  // max-width: 1300px;
+  // min-width: 300px;
 }
 
 .titre-global {
-  @extend %titre-global;
+  font-family: $montserrat;
+  text-align: center;
+  font-size: 70px;
+  padding: 180px 30px 90px;
   color: #fff;
-  padding: 80px 0 30px;
 }
 
 .main-h1 {
-  padding: 30px 0 100px;
+  padding: 80px 30px 100px;
   font-size: 150px;
   color: #fff;
   font-family: $bitter;
   letter-spacing: 2px;
 }
 
-.accueil-infos {
-  width: 700px;
-  height: 300px;
-  padding: 25px auto;
-  background: $babyBlueEyes;
-  display: flex;
-  border-radius: 5px;
-}
-
 .scroll-btn {
   width: 90px;
   height: 90px;
-  position: absolute;
-  bottom: 5%;
-  left: 50%;
-  transform: translateX(-50%);
   background: $gunmetal;
   border-radius: 50px;
   border: 1px solid #fff;
@@ -279,4 +274,79 @@ header {
 
 .media:hover {
   transform: scale(1.1);
+}
+
+
+// Header Responsive 
+
+@media screen and (max-width: 1350px) {
+  .titre-global {
+    font-size: 60px;
+  }
+  .main-h1 {
+    font-size: 130px;
+  }
+}
+@media screen and (max-width: 1150px) {
+  .titre-global {
+    font-size: 50px;
+  }
+  .main-h1 {
+    font-size: 120px;
+    padding: 90px 30px 100px;
+  }
+  .media {
+    margin: 15px 0;
+    width: 50px;
+    height: 50px;
+  }
+  .media img {
+    width: 25px;
+  }
+  .scroll-btn {
+    width: 70px;
+    height: 70px;
+  }
+  .scroll-btn i {
+    font-size: 45px;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  header {
+    height: 600px;
+  }
+  .titre-global {
+    font-size: 35px;
+    padding: 80px 30px 20px;
+  }
+  .main-h1 {
+    font-size: 80px;
+    padding: 90px 30px 100px;
+  }
+  .media {
+    margin: 15px 0;
+    width: 50px;
+    height: 50px;
+  }
+  .media img {
+    width: 25px;
+  }
+  .scroll-btn {
+    width: 70px;
+    height: 70px;
+  }
+  .scroll-btn i {
+    font-size: 45px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .titre-global {
+    font-size: 25px;
+    line-height: 40px;
+  }
+  .main-h1 {
+    font-size: 50px;
+  }
 }
