--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,28 @@
+.titre-global {
+  font-family: "Montserrat", sans-serif;
+  text-align: center;
+  font-size: 70px;
+  padding: 0 25px 20px;
+}
+
+@media screen and (max-width: 1100px) {
+  .titre-global {
+    font-size: 60px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .titre-global {
+    font-size: 50px;
+  }
+}
+@media screen and (max-width: 600px) {
+  .titre-global {
+    font-size: 30px;
+    padding: 10px 5px;
+  }
+}
 body {
   font-family: "Puritan", sans-serif;
-  width: 100%;
 }
 
 nav {
@@ -205,7 +227,7 @@ header {
   width: 100%;
 }
 
-.titre-global {
+.main-h2 {
   font-family: "Montserrat", sans-serif;
   text-align: center;
   font-size: 70px;
@@ -214,7 +236,7 @@ header {
 }
 
 .main-h1 {
-  padding: 80px 30px 100px;
+  padding: 80px 30px 150px;
   font-size: 150px;
   color: #fff;
   font-family: "Bitter", serif;
@@ -265,7 +287,7 @@ header {
 }
 
 @media screen and (max-width: 1350px) {
-  .titre-global {
+  .main-h2 {
     font-size: 60px;
   }
 
@@ -274,13 +296,13 @@ header {
   }
 }
 @media screen and (max-width: 1150px) {
-  .titre-global {
+  .main-h2 {
     font-size: 50px;
   }
 
   .main-h1 {
     font-size: 120px;
-    padding: 90px 30px 100px;
+    padding: 90px 30px 150px;
   }
 
   .media {
@@ -307,7 +329,7 @@ header {
     height: 600px;
   }
 
-  .titre-global {
+  .main-h2 {
     font-size: 35px;
     padding: 80px 30px 20px;
   }
@@ -337,13 +359,187 @@ header {
   }
 }
 @media screen and (max-width: 650px) {
-  .titre-global {
+  .main-h2 {
     font-size: 25px;
     line-height: 40px;
   }
 
   .main-h1 {
     font-size: 50px;
+  }
+}
+.accueil-infos {
+  padding: 50px 20px;
+  background-color: #92bcea;
+  border-top: solid 1px #f1f1f1;
+  border-bottom: solid 1px #f1f1f1;
+}
+
+.separation {
+  margin: 0 auto 70px;
+  height: 2px;
+  width: 300px;
+  border-radius: 3px;
+  background: #000;
+  border: none;
+}
+
+.infos-container {
+  width: 80%;
+  max-width: 1000px;
+  height: auto;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.infos {
+  font-size: 25px;
+  width: 350px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.infos i {
+  margin-bottom: 20px;
+  font-size: 60px;
+}
+
+.infos p {
+  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 950px) {
+  .accueil-infos {
+    padding: 50px 20px;
+  }
+
+  .separation {
+    width: 200px;
+  }
+
+  .infos {
+    width: 300px;
+  }
+
+  .infos i {
+    font-size: 45px;
+  }
+
+  .infos-p {
+    font-size: 18px;
+  }
+}
+.presentation {
+  margin: 50px 0;
+}
+
+.presentation-container {
+  width: 1300px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 200px;
+  flex-wrap: wrap;
+}
+
+.txt-presentation {
+  width: 500px;
+  height: 500px;
+  margin: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.txt-presentation p:nth-child(1) {
+  font-size: 50px;
+  font-weight: lighter;
+  padding: 0 0 20px 0;
+}
+
+.underline-blue {
+  width: 200px;
+  height: 3px;
+  background: #92bcea;
+  border: none;
+  margin: 0;
+}
+
+.txt-presentation p:nth-child(3) {
+  font-size: 30px;
+  padding: 20px 0 20px;
+}
+
+.txt-presentation p:nth-child(4) {
+  font-size: 30px;
+  padding: 20px 0 20px;
+}
+
+.txt-presentation a {
+  color: #000;
+  font-size: 20px;
+  padding: 20px 0;
+}
+
+.img-presentation {
+  border: 1px solid #000;
+  width: 500px;
+  height: 500px;
+  margin: 50px;
+}
+
+.img1 {
+  background: url(../../assets/img/pallet1.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.img2 {
+  background: url(../../assets/img/pallet2.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.img3 {
+  background: url(../../assets/img/pallet3.jpeg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media screen and (max-width: 1300px) {
+  .presentation-container {
+    width: 90%;
+  }
+
+  .txt-presentation {
+    height: auto;
+  }
+}
+@media screen and (max-width: 800px) {
+  .presentation-container {
+    margin-bottom: 100px;
+  }
+
+  .txt-presentation p:nth-child(1) {
+    font-size: 35px;
+  }
+
+  .img-presentation {
+    margin: 5px;
+  }
+
+  .txt-box-galerie {
+    margin: 5px;
   }
 }
 
