--- a/styles/style.css
+++ b/styles/style.css
@@ -445,7 +445,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 200px;
+  margin-bottom: 100px;
   flex-wrap: wrap;
 }
 
@@ -456,6 +456,11 @@ header {
   display: flex;
   justify-content: center;
   flex-direction: column;
+}
+
+.presentation strong {
+  color: #92bcea;
+  font-weight: bolder;
 }
 
 .txt-presentation p:nth-child(1) {
@@ -540,6 +545,75 @@ header {
 
   .txt-box-galerie {
     margin: 5px;
+  }
+}
+/* ------------ Section Parallax ------------- */
+.parallax {
+  background-image: url(../../assets/img/palette-parallax.jpeg);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.trois-contacts-container {
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.trois-contacts {
+  width: 800px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box {
+  width: 200px;
+  text-align: center;
+}
+
+.box span {
+  font-size: 20px;
+}
+
+.box img {
+  display: block;
+  margin: 0 auto 10px;
+  width: 70px;
+}
+
+@media screen and (max-width: 900px) {
+  .titre-contact {
+    margin: 30px 0 20px;
+    font-size: 40px;
+  }
+
+  .contact-sous-titre {
+    margin: 0 20px 20px;
+    font-size: 16px;
+  }
+
+  .trois-contacts {
+    flex-direction: column;
+    width: 90%;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .box {
+    margin: 20px 0;
+  }
+
+  .box img {
+    width: 50px;
   }
 }
 
