--- a/scss/pages_scss/_accueil.scss
+++ b/scss/pages_scss/_accueil.scss
@@ -212,11 +212,14 @@ header {
   background-color: rgba(0, 0, 0, 0.247);
   display: flex;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
 }
 
 .accueil-txt-container {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   // max-width: 1300px;
   // min-width: 300px;
 }
@@ -225,12 +228,12 @@ header {
   font-family: $montserrat;
   text-align: center;
   font-size: 70px;
-  padding: 180px 30px 90px;
+  padding: 100px 30px 50px;
   color: #fff;
 }
 
 .main-h1 {
-  padding: 80px 30px 150px;
+  padding: 40px 30px 100px;
   font-size: 150px;
   color: #fff;
   font-family: $bitter;
@@ -243,6 +246,7 @@ header {
   background: $gunmetal;
   border-radius: 50px;
   border: 1px solid #fff;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -256,7 +260,7 @@ header {
 .cont-medias {
   position: absolute;
   right: 3%;
-  top: 75%;
+  bottom: 5%;
 }
 
 .media {
@@ -324,18 +328,16 @@ header {
 }
 
 @media screen and (max-width: 900px) {
-  header {
-    height: 900px;
-  }
+  // header {
+  //   height: 900px;
+  // }
   
   .main-h2 {
     font-size: 35px;
-    padding: 80px 30px 20px;
   }
   
   .main-h1 {
-    font-size: 80px;
-    padding: 90px 30px 100px;
+    font-size: 80px
   }
   
   .media {
