--- a/styles/style.css
+++ b/styles/style.css
@@ -220,23 +220,26 @@ header {
   background-color: rgba(0, 0, 0, 0.247);
   display: flex;
   align-items: center;
-  flex-direction: column;
+  justify-content: center;
 }
 
 .accueil-txt-container {
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .main-h2 {
   font-family: "Montserrat", sans-serif;
   text-align: center;
   font-size: 70px;
-  padding: 180px 30px 90px;
+  padding: 100px 30px 50px;
   color: #fff;
 }
 
 .main-h1 {
-  padding: 80px 30px 150px;
+  padding: 40px 30px 100px;
   font-size: 150px;
   color: #fff;
   font-family: "Bitter", serif;
@@ -249,6 +252,7 @@ header {
   background: #2B303A;
   border-radius: 50px;
   border: 1px solid #fff;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -262,7 +266,7 @@ header {
 .cont-medias {
   position: absolute;
   right: 3%;
-  top: 75%;
+  bottom: 5%;
 }
 
 .media {
@@ -325,18 +329,12 @@ header {
   }
 }
 @media screen and (max-width: 900px) {
-  header {
-    height: 900px;
-  }
-
   .main-h2 {
     font-size: 35px;
-    padding: 80px 30px 20px;
   }
 
   .main-h1 {
     font-size: 80px;
-    padding: 90px 30px 100px;
   }
 
   .media {
