--- a/styles/style.css
+++ b/styles/style.css
@@ -209,6 +209,7 @@ nav {
 header {
   background: url("../../assets/img/headerBG.jpeg") no-repeat center;
   height: 100vh;
+  min-height: -webkit-fill-available;
   background-size: cover;
   text-align: center;
   position: relative;
@@ -329,6 +330,10 @@ header {
   }
 }
 @media screen and (max-width: 900px) {
+  header {
+    height: 650px;
+  }
+
   .main-h2 {
     font-size: 35px;
   }
